too long title got fixed - seed also

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,7 +1,6 @@
 /* card product index*/
 .card-product {
 overflow: hidden;
-text-overflow: ellipsis;
 background: $white;
 color: $dark-green;
 border: 1px solid $dark-green;
@@ -105,7 +104,6 @@ h4{
 
 .card-product-rec {
   overflow: hidden;
-  text-overflow: ellipsis;
   background: $white;
   color: $dark-green;
   border: 1px solid $dark-green;
